Fix some color contrast accessibility issues

--- a/assets/css/components/_announcement.scss
+++ b/assets/css/components/_announcement.scss
@@ -54,7 +54,7 @@
 }
 
 .comment-time {
-  color: $medium-gray;
+  color: $secondary-font-color;
   font-size: $tiny-font-size;
   margin-bottom: 0;
 }
