--- a/assets/css/components/_announcements-interests-nav.scss
+++ b/assets/css/components/_announcements-interests-nav.scss
@@ -22,7 +22,7 @@
 
   a {
     border-bottom: 1px solid transparent;
-    color: $medium-gray;
+    color: $secondary-font-color;
     display: inline-block;
     padding: $tiny-spacing;
     transform: translateY(1px);
@@ -40,6 +40,7 @@
 
     &.selected {
       border-color: $dark-blue;
+      font-weight: $font-weight-medium;
     }
   }
 
