--- a/assets/css/components/_announcements.scss
+++ b/assets/css/components/_announcements.scss
@@ -39,7 +39,7 @@
 }
 
 .announcement-metadata {
-  color: $medium-gray;
+  color: $secondary-font-color;
   font-size: $small-font-size;
 
   .author {
